# abies_area_modelling

./: .gitattributes  .gitignore  README.md  config.json  pipeline_current_area.drawio  prediction.ipynb  pyproject.toml  train_models.ipynb
data/: predictors_abies.xml  predictors_not_abies.xml
eda/: not_multicollinear_pred_analysis.html
map_current/: data.csv  metrics.txt
models/abies_area_model_2026_06_17_18_26_roc_auc/: log_abies_area_model_2026_06_17_18_26.txt
models/abies_area_model_2026_06_18_09_43_fbeta/: abies_area_model_2026_06_18_09_43_fbeta  log_abies_area_model_2026_06_18_09_43.txt
models/abies_area_model_2026_06_18_09_50_fbeta/: log_abies_area_model_2026_06_18_09_50.txt
models/abies_area_model_2026_06_18_09_55_fbeta/: abies_area_model_2026_06_18_09_55_fbeta  log_abies_area_model_2026_06_18_09_55.txt
models/abies_area_model_2026_06_18_10_00_fbeta/: abies_area_model_2026_06_18_10_00_fbeta  log_abies_area_model_2026_06_18_10_00.txt
models/abies_area_model_fbeta_0.6/: abies_area_model_2026_06_25_13_59_fbeta  abies_area_model_2026_07_01_14_30_fbeta  data_for_map.csv  log_abies_area_model_2026_06_25_13_59.txt  log_abies_area_model_2026_07_01_14_30.txt
models_comparison/: comparisons.txt  model_metrics.csv
scripts/: calculate_weather_data.py  format_fn.py  load_raw_data.py  load_weather_completely.py  load_weather_partially.py  optimize_model.py  partial_deps_and_violins.py  plot_map.py  plot_map_and_save_data.py  prepare_datasets.py  read_log.py  remove_multicollinear.py  save_best_model.py  weather_means.py
(+20 files in other folders)
