[project]
name = "abies-01"
version = "0.1.0"
description = "Modelling of Abies sibirica area according to relief and climate"
authors = [
    {name = "SawerBeetle",email = "sawer-beetle@yandex.ru"}
]
requires-python = ">=3.10, <3.13"
dependencies = [
    "keyboard", 
    "lightgbm", 
    "matplotlib", 
    "numpy", 
    "optuna", 
    "pandas", 
    "scipy", 
    "seaborn", 
    "scikit-learn", 
    "statannotations", 
    "statsmodels", 
    "tqdm", 
    "xgboost",
    "ipykernel (>=7.2.0,<8.0.0)",
    "pip (>=26.1,<27.0)",
    "setuptools (<81.0.0)",
    "fg-data-profiling (>=4.19.1,<5.0.0)",
    "ydata-profiling (>=4.18.4,<5.0.0)",
    "pyarrow (>=24.0.0,<25.0.0)",
    "plotly (>=6.8.0,<7.0.0)",
    "shapely (>=2.1.2,<3.0.0)",
    "geopandas (>=1.1.4,<2.0.0)",
    "nbformat (>=5.10.4,<6.0.0)",
]
[tool.poetry.dependencies]
python = ">=3.11,<3.13"

[dependency-groups]
dev = [
    "ipykernel",
    "pip"
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
